@@ -3345,7 +3345,6 @@ ctx->set_verify_callback(verify_function, ec);
 
 		state_updated();
 		m_need_save_resume_data = true;
-		state_updated();
 
 		remove_time_critical_piece(index, true);
 
